--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DisplayData"></activity>
+        <activity android:name=".loggin"></activity>
+        <activity android:name=".DisplayData" />
         <activity android:name=".SaveRecipe" />
         <activity android:name=".MainActivity">
             <intent-filter>
