--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mycookbook">
+    xmlns:dist="http://schemas.android.com/apk/distribution"
+    package="com.mcb.mycookbook">
+    <dist:module dist:instant="true" />
 
     <application
+        android:extractNativeLibs="false"
         android:allowBackup="true"
         android:icon="@drawable/recipes"
         android:label="@string/app_name"
         android:roundIcon="@drawable/recipes"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Base"></activity>
-        <activity android:name=".LogginActivity" />
-        <activity android:name=".DisplayData" />
-        <activity android:name=".SaveRecipe" />
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        android:targetSandboxVersion="2">
+        <activity android:name="com.mcb.mycookbook.Base"></activity>
+        <activity android:name="com.mcb.mycookbook.LogginActivity" />
+        <activity android:name="com.mcb.mycookbook.DisplayData" />
+        <activity android:name="com.mcb.mycookbook.SaveRecipe" />
+        <activity android:name="com.mcb.mycookbook.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
