--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,23 +10,23 @@ android {
 
     // Instead, use the bundle block to control which types of configuration APKs
     // you want your app bundle to support.
-    bundle {
-        language {
-            // Specifies that the app bundle should not support
-            // configuration APKs for language resources. These
-            // resources are instead packaged with each base and
-            // dynamic feature APK.
-            enableSplit = false
-        }
-        density {
-            // This property is set to true by default.
-            enableSplit = true
-        }
-        abi {
-            // This property is set to true by default.
-            enableSplit = true
-        }
-    }
+//    bundle {
+//        language {
+//            // Specifies that the app bundle should not support
+//            // configuration APKs for language resources. These
+//            // resources are instead packaged with each base and
+//            // dynamic feature APK.
+//            enableSplit = false
+//        }
+//        density {
+//            // This property is set to true by default.
+//            enableSplit = true
+//        }
+//        abi {
+//            // This property is set to true by default.
+//            enableSplit = true
+//        }
+//    }
 
 
     defaultConfig {
@@ -35,29 +35,37 @@ android {
         targetSdkVersion 28
         versionCode 3
         versionName "3.1"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//        }
+//    }
 
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation("com.github.bumptech.glide:glide:4.11.0") {
+        exclude group: "com.android.support"
+    }
+    implementation "com.android.support:support-fragment:28.0.0"
+
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation 'com.google.android.gms:play-services-ads:19.0.1'
     implementation "com.google.android.gms:play-services-instantapps:17.0.0"
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
