--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,37 +2,51 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.mcb.mycookbook">
+
     <dist:module dist:instant="true" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
-        android:extractNativeLibs="false"
         android:allowBackup="true"
+        android:extractNativeLibs="false"
         android:icon="@drawable/recipes"
         android:label="@string/app_name"
         android:roundIcon="@drawable/recipes"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:targetSandboxVersion="2">
-        <activity android:name="com.mcb.mycookbook.Base"></activity>
-        <activity android:name="com.mcb.mycookbook.LogginActivity" />
-        <activity android:name="com.mcb.mycookbook.DisplayData" />
-        <activity android:name="com.mcb.mycookbook.SaveRecipe" />
-        <activity android:name="com.mcb.mycookbook.MainActivity">
+        android:targetSandboxVersion="2"
+        android:theme="@style/AppTheme">
+        <activity android:name=".viewImageActivity"></activity>
+        <activity android:name=".Base" />
+        <activity android:name=".LogginActivity" />
+        <activity android:name=".DisplayData" />
+        <activity android:name=".SaveRecipe" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/*" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data android:mimeType="image/*" />
-                <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-2739009739311215~2975802220"/>
+            android:value="ca-app-pub-2739009739311215~2975802220" />
     </application>
 
 </manifest>
